first position not showing issue solved

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
+  border: 1px solid green;
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
